--- a/www.hzshuangmei.com/templets/shuangmei/_header.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/_header.htm
@@ -2,7 +2,8 @@
     <div class="top">
         <div class="shuang_m1 clearFix">
             <div class="top_l">
-                <span>香港红瑞集团 旗下品牌 海南红妆双美连锁</span> | <span>美丽时间：周一周日9点--21点</span>
+                <!--<span>香港红瑞集团 旗下品牌 海南红妆双美连锁</span>-->
+                <img src="{dede:global.cfg_imgpath/}/pc/tl_logo.png" alt="logo"/>|<span>美丽时间：周一周日9点--21点</span>
             </div>
             <div class="top_r">
                 <a href="" class="pad_r"><i class="tel"></i><span>0898-66156043</span></a>
