--- a/m.hzshuangmei.com/templets/shuangmei/_script.htm
+++ b/m.hzshuangmei.com/templets/shuangmei/_script.htm
@@ -1,15 +1,15 @@
 
     <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="{dede:global.cfg_jspath/}/m/common.js" type="text/javascript" charset="utf-8"></script>
+    <script src="{dede:global.cfg_jspath/}/m/common.js" type="text/javascript" charset="utf-8" rel="preload"></script>
 
     <!--  自定义邀请框库 -->
-    <script src="{dede:global.cfg_jspath/}/m/layer/mobile/layer.js" charset="utf-8"></script>
+    <script src="{dede:global.cfg_jspath/}/m/layer/mobile/layer.js" charset="utf-8" rel="preload"></script>
     <!-- 分享库 -->
-    <script src="{dede:global.cfg_jspath/}/m/NativeShare.js" type="text/javascript" charset="utf-8"></script>
+    <script src="{dede:global.cfg_jspath/}/m/NativeShare.js" type="text/javascript" charset="utf-8" rel="preload"></script>
     <!-- 自定义快商通邀请框和分享按钮配置文件 -->
-    <script src="{dede:global.cfg_jspath/}/m/kst_popup.js" charset="utf-8"></script>
+    <script src="{dede:global.cfg_jspath/}/m/kst_popup.js" charset="utf-8" rel="preload"></script>
     <!-- 点击延迟处理 -->
-    <script src="{dede:global.cfg_jspath/}/m/fastclick.js" type="text/javascript" charset="utf-8"></script>
+    <script src="{dede:global.cfg_jspath/}/m/fastclick.js" type="text/javascript" charset="utf-8" rel="preload"></script>
     <script type="text/javascript">
         $(function  () {
         	FastClick.attach(document.body);
