--- a/www.hzshuangmei.com/templets/shuangmei/_link.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/_link.htm
@@ -11,10 +11,10 @@
 <link rel="preconnect" href="https://js.hzshuangmei.com">
 <!-- Style for the page-->
 <link rel="stylesheet" href="https://cdn.bootcss.com/Swiper/3.4.2/css/swiper.min.css"/>
-<link rel="stylesheet" href="{dede:global.cfg_csspath/}/pc/common.css"/>
+<link rel="stylesheet" href="{dede:global.cfg_csspath/}/pc/common.css" rel="preload"/>
 <!-- favicon.ico -->
-<link rel="icon" href="https://img.hzshuangmei.com/pc/favicon.ico" type="image/x-icon"/>
-<link rel="shortcut icon" href="https://img.hzshuangmei.com/pc/favicon.ico" type="image/x-icon"/>
+<link rel="icon" href="https://img.hzshuangmei.com/pc/favicon.ico" type="image/x-icon" rel="preload"/>
+<link rel="shortcut icon" href="https://img.hzshuangmei.com/pc/favicon.ico" type="image/x-icon" rel="preload"/>
 <!-- humanstxt -->
 <link rel="author" href="https://www.hzshuangmei.com/humans.txt" />
 <link rel="preload" as=image  href="https://img.hzshuangmei.com/pc/kst/default.png">
