--- a/m.hzshuangmei.com/templets/shuangmei/_link.htm
+++ b/m.hzshuangmei.com/templets/shuangmei/_link.htm
@@ -1,4 +1,4 @@
-<!-- Pre for optimization -->
+ rel="preload"<!-- Pre for optimization -->
 <link rel="dns-prefetch" href="https://cdn.bootcss.com/">
 <link rel="dns-prefetch" href="https://uploads.hzshuangmei.com">
 <link rel="dns-prefetch" href="https://img.hzshuangmei.com">
@@ -14,8 +14,8 @@
 <link rel="prefetch" src="https://img.hzshuangmei.com/pc/kst/{dede:field name='filename'/}.png">
 <link rel="prerender" src="https://img.hzshuangmei.com/pc/kst/{dede:field name='filename'/}.png">
 <!-- Style for the page-->
-<link rel="stylesheet" href="{dede:global.cfg_csspath/}/m/common.css">
-<link rel="stylesheet"  href="{dede:global.cfg_csspath/}/m/site.css">
+<link rel="stylesheet" href="{dede:global.cfg_csspath/}/m/common.css" rel="preload">
+<link rel="stylesheet"  href="{dede:global.cfg_csspath/}/m/site.css" rel="preload">
 <!-- favicon.ico -->
-<link rel="icon" href="https://img.hzshuangmei.com/m/favicon.ico" type="image/x-icon" />
-<link rel="shortcut icon" href="https://img.hzshuangmei.com/m/favicon.ico" type="image/x-icon" />
+<link rel="icon" href="https://img.hzshuangmei.com/m/favicon.ico" type="image/x-icon" rel="preload"/>
+<link rel="shortcut icon" href="https://img.hzshuangmei.com/m/favicon.ico" type="image/x-icon" rel="preload"/>
