--- a/m.hzshuangmei.com/templets/shuangmei/_meta.htm
+++ b/m.hzshuangmei.com/templets/shuangmei/_meta.htm
@@ -16,6 +16,6 @@
 <!-- ios app style -->
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<script src="https://js.hzshuangmei.com/m/mobile-util.js" type="text/javascript"></script>
+<script src="https://js.hzshuangmei.com/m/mobile-util.js" type="text/javascript" rel="preload"></script>
 
 
