http2 server push 优化配置
http2 server push 优化配置

--- a/m.hzshuangmei.com/templets/shuangmei/index_brand.htm
+++ b/m.hzshuangmei.com/templets/shuangmei/index_brand.htm
@@ -10,6 +10,9 @@
     <link rel="canonical" href="https://m.hzshuangmei.com/">
     <title>{dede:global.cfg_webname/}</title>
     {dede:include filename="_link.htm"/}
+    <link rel="preload" href="https://css.hzshuangmei.com/m/brandzt/theme_sj.css" as="style" crossorigin />
+    <link rel="preload" href="https://js.hzshuangmei.com/m/brandzt/theme_sj.js" as="script" crossorigin />
+    <link rel="preload" href="https://js.hzshuangmei.com/m/brandzt/ydui.js" as="script" crossorigin />
     <link href="https://css.hzshuangmei.com/m/brandzt/theme_sj.css " rel="stylesheet" />
 </head>
 
