--- a/www.hzshuangmei.com/templets/shuangmei/_link.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/_link.htm
@@ -4,17 +4,14 @@
 <link rel="dns-prefetch" href="https://img.hzshuangmei.com">
 <link rel="dns-prefetch" href="https://css.hzshuangmei.com">
 <link rel="dns-prefetch" href="https://js.hzshuangmei.com">
-<link rel="preconnect" href="https://cdn.bootcss.com/">
-<link rel="preconnect" href="https://uploads.hzshuangmei.com">
-<link rel="preconnect" href="https://img.hzshuangmei.com">
-<link rel="preconnect" href="https://css.hzshuangmei.com">
-<link rel="preconnect" href="https://js.hzshuangmei.com">
+<link rel="preload" href="{dede:global.cfg_csspath/}/pc/common.css" as="style" crossorigin />
+<link rel="preload" href="https://img.hzshuangmei.com/pc/favicon.ico" as="image" type="image/x-icon" crossorigin />
 <!-- Style for the page-->
 <link rel="stylesheet" href="https://cdn.bootcss.com/Swiper/3.4.2/css/swiper.min.css"/>
-<link rel="stylesheet" href="{dede:global.cfg_csspath/}/pc/common.css" rel="preload"/>
+<link rel="stylesheet" href="{dede:global.cfg_csspath/}/pc/common.css"/>
 <!-- favicon.ico -->
-<link rel="icon" href="https://img.hzshuangmei.com/pc/favicon.ico" type="image/x-icon" rel="preload"/>
-<link rel="shortcut icon" href="https://img.hzshuangmei.com/pc/favicon.ico" type="image/x-icon" rel="preload"/>
+<link rel="icon" href="https://img.hzshuangmei.com/pc/favicon.ico" type="image/x-icon"/>
+<link rel="shortcut icon" href="https://img.hzshuangmei.com/pc/favicon.ico" type="image/x-icon"/>
 <!-- humanstxt -->
 <link rel="author" href="https://www.hzshuangmei.com/humans.txt" />
 <link rel="preload" as=image  href="https://img.hzshuangmei.com/pc/kst/default.png">
