--- a/www.hzshuangmei.com/templets/shuangmei/article_article.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/article_article.htm
@@ -13,6 +13,8 @@
         {dede:include filename="_link.htm"/}
         <link rel="canonical" href="https://www.hzshuangmei.com{dede:field.arcurl/}" />
         <link rel="alternate" media="only screen and(max-width: 640px)"     href="https://m.hzshuangmei.com{dede:field.arcurl/}" >
+        <link rel="preload" href="{dede:global.cfg_csspath/}/pc/article_common.css" as="style" crossorigin />
+        <link rel="preload" href="{dede:global.cfg_jspath/}/pc/article_common.js" as="script" crossorigin />
         <link rel="stylesheet" href="{dede:global.cfg_csspath/}/pc/article_common.css"/>
     </head>
     <body>
