--- a/www.hzshuangmei.com/templets/shuangmei/article_doctors.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/article_doctors.htm
@@ -15,6 +15,7 @@
     <link rel="canonical" href="https://www.hzshuangmei.com{dede:field.arcurl/}" />
     <link rel="alternate" media="only screen and(max-width: 640px)"   href="https://m.hzshuangmei.com{dede:field.arcurl/}" >
     {dede:include filename="_link.htm"/}
+     <link rel="preload" href="{dede:global.cfg_csspath/}/pc/tjb.css" as="style" crossorigin />
     <link rel="stylesheet" href="{dede:global.cfg_csspath/}/pc/tjb.css"/>
     {dede:field.ztmeta/}
 <body>
