--- a/www.hzshuangmei.com/templets/shuangmei/index.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/index.htm
@@ -7,6 +7,9 @@
     <meta name="author" content="设计：于涛，前端：王苗"/>
     <title>{dede:global.cfg_webname/}</title>
     {dede:include filename="_link.htm"/}
+    <link rel="preload" href="{dede:global.cfg_csspath/}/pc/index.css" as="style" crossorigin />
+    <link rel="preload" href="{dede:global.cfg_jspath/}/pc/index.js" as="script" crossorigin />
+    <link rel="preload" href="https://img.hzshuangmei.com/pc/brand2.webm" as="video"  type="video/webm" crossorigin />
     <link rel="stylesheet" href="{dede:global.cfg_csspath/}/pc/index.css"/>
     <link rel="canonical" href="https://www.hzshuangmei.com/">
     <link rel="alternate" media="only screen and(max-width: 640px)"     href="https://m.hzshuangmei.com/" >
