--- a/www.hzshuangmei.com/templets/shuangmei/_script.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/_script.htm
@@ -1,8 +1,11 @@
+<link rel="preload" href="{dede:global.cfg_jspath/}/pc/common.js" as="script" crossorigin>
+<link rel="preload" href="{dede:global.cfg_jspath/}/pc/layer/layer.js" as="script" crossorigin>
+<link rel="preload" href="{dede:global.cfg_jspath/}/pc/kst_popup.js" as="script" crossorigin>
 <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/Swiper/3.4.2/js/swiper.min.js"></script>
-<script src="{dede:global.cfg_jspath/}/pc/common.js" rel="preload"></script>
-<script src="{dede:global.cfg_jspath/}/pc/layer/layer.js" rel="preload"></script>
-<script src="{dede:global.cfg_jspath/}/pc/kst_popup.js" rel="preload"></script>
+<script src="{dede:global.cfg_jspath/}/pc/common.js" ></script>
+<script src="{dede:global.cfg_jspath/}/pc/layer/layer.js"></script>
+<script src="{dede:global.cfg_jspath/}/pc/kst_popup.js"></script>
  <!-- html5标签兼容ie低版本浏览器 -->
 <!-- [if lt IE 9]>     -->
 <script src="https://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
