--- a/www.hzshuangmei.com/templets/shuangmei/list_case.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/list_case.htm
@@ -6,6 +6,8 @@
     <meta name="author" content="设计：于涛，前端：王苗" />
     <title>{dede:field.seotitle/}_{dede:global.cfg_webname/}</title>
     {dede:include filename="_link.htm"/}
+    <link rel="preload" href="{dede:global.cfg_csspath/}/pc/list_case.css" as="style" crossorigin />
+    <link rel="preload" href="{dede:global.cfg_jspath/}/pc/list_case.js" as="script" crossorigin />
     <link rel="stylesheet" href="{dede:global.cfg_csspath/}/pc/list_case.css" />
 <link rel="canonical" href="https://www.hzshuangmei.com{dede:type typeid=0 row=1}[field:typelink /]{/dede:type}">
     <link rel="alternate" media="only screen and(max-width: 640px)"     href="https://m.hzshuangmei.com{dede:type typeid=0 row=1}[field:typelink /]{/dede:type}" >
