--- a/www.hzshuangmei.com/templets/shuangmei/list_doctors.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/list_doctors.htm
@@ -5,6 +5,8 @@
     <title>{dede:field.seotitle/}_{dede:global.cfg_webname/}</title>
     <meta name="keywords" content="{dede:field name='keywords'/}" />
     <meta name="description" content="{dede:field name='description' function='html2text(@me)'/}" /> {dede:include filename="_link.htm"/}
+    <link rel="preload" href="{dede:global.cfg_csspath/}/pc/list_doctors.css" as="style" crossorigin />
+    <link rel="preload" href="{dede:global.cfg_jspath/}/pc/list_doctors.js" as="script" crossorigin />
     <link rel="stylesheet" href="{dede:global.cfg_csspath/}/pc/list_doctors.css" />
     <link rel="canonical" href="https://www.hzshuangmei.com{dede:type typeid=0 row=1}[field:typelink /]{/dede:type}">
     <link rel="alternate" media="only screen and(max-width: 640px)" href="https://m.hzshuangmei.com{dede:type typeid=0 row=1}[field:typelink /]{/dede:type}">
