http2 server push 优化配置
http2 server push 优化配置

--- a/m.hzshuangmei.com/templets/shuangmei/_link.htm
+++ b/m.hzshuangmei.com/templets/shuangmei/_link.htm
@@ -4,18 +4,19 @@
 <link rel="dns-prefetch" href="https://img.hzshuangmei.com">
 <link rel="dns-prefetch" href="https://css.hzshuangmei.com">
 <link rel="dns-prefetch" href="https://js.hzshuangmei.com">
-<link rel="preconnect" href="https://uploads.hzshuangmei.com">
-<link rel="preconnect" href="https://img.hzshuangmei.com">
-<link rel="preconnect" href="https://css.hzshuangmei.com">
-<link rel="preconnect" href="https://js.hzshuangmei.com">
+
 <link rel="prefetch" href="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js" as="script">
 <link rel="prefetch" src="https://img.hzshuangmei.com/pc/kst/default.png">
 <link rel="prerender" src="https://img.hzshuangmei.com/pc/kst/default.png">
 <link rel="prefetch" src="https://img.hzshuangmei.com/pc/kst/{dede:field name='filename'/}.png">
 <link rel="prerender" src="https://img.hzshuangmei.com/pc/kst/{dede:field name='filename'/}.png">
+
+<link rel="preload" href="{dede:global.cfg_csspath/}/m/common.css" as="style" crossorigin>
+<link rel="preload"  href="{dede:global.cfg_csspath/}/m/site.css" as="style" crossorigin>
+<link rel="preload"  href="https://img.hzshuangmei.com/m/favicon.ico" as="image" type="image/x-icon" crossorigin>
 <!-- Style for the page-->
-<link rel="stylesheet" href="{dede:global.cfg_csspath/}/m/common.css" rel="preload">
-<link rel="stylesheet"  href="{dede:global.cfg_csspath/}/m/site.css" rel="preload">
+<link rel="stylesheet" href="{dede:global.cfg_csspath/}/m/common.css">
+<link rel="stylesheet"  href="{dede:global.cfg_csspath/}/m/site.css">
 <!-- favicon.ico -->
-<link rel="icon" href="https://img.hzshuangmei.com/m/favicon.ico" type="image/x-icon" rel="preload"/>
-<link rel="shortcut icon" href="https://img.hzshuangmei.com/m/favicon.ico" type="image/x-icon" rel="preload"/>
+<link rel="icon" href="https://img.hzshuangmei.com/m/favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="https://img.hzshuangmei.com/m/favicon.ico" type="image/x-icon" />
