修改错误标签
修改错误标签

--- a/m.hzshuangmei.com/templets/shuangmei/_link.htm
+++ b/m.hzshuangmei.com/templets/shuangmei/_link.htm
@@ -1,4 +1,4 @@
- rel="preload"<!-- Pre for optimization -->
+<!-- Pre for optimization -->
 <link rel="dns-prefetch" href="https://cdn.bootcss.com/">
 <link rel="dns-prefetch" href="https://uploads.hzshuangmei.com">
 <link rel="dns-prefetch" href="https://img.hzshuangmei.com">
