顶部导航项目缩略图修复
顶部导航项目缩略图修复

--- a/www.hzshuangmei.com/templets/shuangmei/_header.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/_header.htm
@@ -53,7 +53,7 @@
                    {dede:sql sql="select * from  sm_archives as a,sm_addonproject as b where a.id=b.aid and  a.channel=18  and a.typeid=20  and a.arcrank=0 order by  a.weight desc  limit  0,3"}
                           <li>
                         <a href="[field:id runphp='yes']$arcRow=GetOneArchive(@me);@me=$arcRow['arcurl'];[/field:id]" target="_blank" rel="noopener">
-                            <img src="[field:picname function='replaceurl(@me)/]" alt="[field:title/]"/>
+                            <img src="[field:litpic function='replaceurl(@me)/]" alt="[field:title/]"/>
                             <p><i></i><span>[field:title/]</span></p>
                         </a>
                     </li>
@@ -79,7 +79,7 @@
                             {dede:sql sql="select * from  sm_archives as a,sm_addonproject as b where a.id=b.aid and  a.channel=18  and a.typeid=15  and a.arcrank=0 order by  a.weight desc  limit  0,3"}
                           <li>
                         <a href="[field:id runphp='yes']$arcRow=GetOneArchive(@me);@me=$arcRow['arcurl'];[/field:id]" target="_blank" rel="noopener">
-                            <img src="[field:picname function='replaceurl(@me)/]" alt="[field:title/]"/>
+                            <img src="[field:litpic function='replaceurl(@me)/]" alt="[field:title/]"/>
                             <p><i></i><span>[field:title/]</span></p>
                         </a>
                     </li>
@@ -101,7 +101,7 @@
                             {dede:sql sql="select * from  sm_archives as a,sm_addonproject as b where a.id=b.aid and  a.channel=18  and a.typeid=14  and a.arcrank=0 order by  a.weight desc  limit  0,3"}
                           <li>
                         <a href="[field:id runphp='yes']$arcRow=GetOneArchive(@me);@me=$arcRow['arcurl'];[/field:id]" target="_blank" rel="noopener">
-                            <img src="[field:picname function='replaceurl(@me)/]" alt="[field:title/]"/>
+                            <img src="[field:litpic function='replaceurl(@me)/]" alt="[field:title/]"/>
                             <p><i></i><span>[field:title/]</span></p>
                         </a>
                     </li>
@@ -123,7 +123,7 @@
                             {dede:sql sql="select * from  sm_archives as a,sm_addonproject as b where a.id=b.aid and  a.channel=18  and a.typeid=16  and a.arcrank=0 order by  a.weight desc  limit  0,3"}
                           <li>
                         <a href="[field:id runphp='yes']$arcRow=GetOneArchive(@me);@me=$arcRow['arcurl'];[/field:id]" target="_blank" rel="noopener">
-                            <img src="[field:picname function='replaceurl(@me)/]" alt="[field:title/]"/>
+                            <img src="[field:litpic function='replaceurl(@me)/]" alt="[field:title/]"/>
                             <p><i></i><span>[field:title/]</span></p>
                         </a>
                     </li>
@@ -145,7 +145,7 @@
                             {dede:sql sql="select * from  sm_archives as a,sm_addonproject as b where a.id=b.aid and  a.channel=18  and a.typeid=21  and a.arcrank=0 order by  a.weight desc  limit  0,3"}
                           <li>
                         <a href="[field:id runphp='yes']$arcRow=GetOneArchive(@me);@me=$arcRow['arcurl'];[/field:id]" target="_blank" rel="noopener">
-                            <img src="[field:picname function='replaceurl(@me)/]" alt="[field:title/]"/>
+                            <img src="[field:litpic function='replaceurl(@me)/]" alt="[field:title/]"/>
                             <p><i></i><span>[field:title/]</span></p>
                         </a>
                     </li>
@@ -167,7 +167,7 @@
                             {dede:sql sql="select * from  sm_archives as a,sm_addonproject as b where a.id=b.aid and  a.channel=18  and a.typeid=22  and a.arcrank=0 order by  a.weight desc  limit  0,3"}
                           <li>
                         <a href="[field:id runphp='yes']$arcRow=GetOneArchive(@me);@me=$arcRow['arcurl'];[/field:id]" target="_blank" rel="noopener">
-                            <img src="[field:picname function='replaceurl(@me)/]" alt="[field:title/]"/>
+                            <img src="[field:litpic function='replaceurl(@me)/]" alt="[field:title/]"/>
                             <p><i></i><span>[field:title/]</span></p>
                         </a>
                     </li>
@@ -189,7 +189,7 @@
                             {dede:sql sql="select * from  sm_archives as a,sm_addonproject as b where a.id=b.aid and  a.channel=18  and a.typeid=19  and a.arcrank=0 order by  a.weight desc  limit  0,3"}
                           <li>
                         <a href="[field:id runphp='yes']$arcRow=GetOneArchive(@me);@me=$arcRow['arcurl'];[/field:id]" target="_blank" rel="noopener">
-                            <img src="[field:picname function='replaceurl(@me)/]" alt="[field:title/]"/>
+                            <img src="[field:litpic function='replaceurl(@me)/]" alt="[field:title/]"/>
                             <p><i></i><span>[field:title/]</span></p>
                         </a>
                     </li>
