--- a/www.hzshuangmei.com/templets/shuangmei/_footer.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/_footer.htm
@@ -19,15 +19,15 @@
                 <i></i>
             </div>
             <ul class="mar_t">
-                <li><a href="/projects/chest/" target="_blank" rel="noopener">>胸部整形</a></li>
-                <li><a href="/projects/eye/">>眼部整形</a></li>
-                <li><a href="/projects/nose/">>鼻部整形</a></li>
-                <li><a href="">>唇部整形</a></li>
-                <li><a href="/projects/body/">>塑形体雕</a></li>
-                <li><a href="">>自体脂肪填充</a></li>
-                <li><a href="">>其他系列</a></li>
-                <li><a href="">>下巴整形</a></li>
-                <li><a href="/projects/private/">>私密整形</a></li>
+                <li><a href="/projects/chest/#project_nav" target="_blank" rel="noopener">>胸部整形</a></li>
+                <li><a href="/projects/eye/#project_nav" target="_blank" rel="noopener">>眼部整形</a></li>
+                <li><a href="/projects/nose/#project_nav" target="_blank" rel="noopener">>鼻部整形</a></li>
+                <li><a href="javascript:void(0)" class="j-site-consult" target="_blank" rel="noopener">>唇部整形</a></li>
+                <li><a href="/projects/body/#project_nav" target="_blank" rel="noopener">>塑形体雕</a></li>
+                <li><a href="/projects/zhifang/ztzfmd.html" target="_blank" rel="noopener">>自体脂肪填充</a></li>
+                <li><a href="/projects/#project_nav" target="_blank" rel="noopener">>其他系列</a></li>
+                <li><a href="/projects/ha/bnsxb.html" target="_blank" rel="noopener">>下巴整形</a></li>
+                <li><a href="/projects/private/#project_nav" target="_blank" rel="noopener">>私密整形</a></li>
             </ul>
         </div>
         <div class="clearFix border-l border-r">
@@ -36,10 +36,10 @@
                 <i></i>
             </div>
             <ul class="mar_t">
-                <li><a href="">>美白祛斑</a></li>
-                <li><a href="">>专业脱毛</a></li>
-                <li><a href="">>祛痘祛疤印</a></li>
-                <li><a href="">>紧肤抗衰</a></li>
+                <li><a href="/projects/quban/quban.html" target="_blank" rel="noopener">>美白祛斑</a></li>
+                <li><a href="/projects/tuomao/tuomao2.html" target="_blank" rel="noopener">>专业脱毛</a></li>
+                <li><a href="/projects/qudou/hzqdk.html" target="_blank" rel="noopener">>祛痘祛疤印</a></li>
+                <li><a href="/projects/chuzhou/quzhou.html" target="_blank" rel="noopener">>紧肤抗衰</a></li>
             </ul>
         </div>
         <div class="clearFix border-l">
@@ -48,13 +48,13 @@
                 <i></i>
             </div>
             <ul class="mar_t">
-                <li><a href="">>玻尿酸塑形</a></li>
-                <li><a href="">>玻尿酸祛皱</a></li>
-                <li><a href="">>BOTOX注射</a></li>
-                <li><a href="">>疤痕针</a></li>
-                <li><a href="">>纹绣</a></li>
-                <li><a href="">>水光注射</a></li>
-                <li><a href="">>其他</a></li>
+                <li><a href="javascript:void(0)" class="j-site-consult" target="_blank" rel="noopener">>玻尿酸塑形</a></li>
+                <li><a href="javascript:void(0)" class="j-site-consult" target="_blank" rel="noopener">>玻尿酸祛皱</a></li>
+                <li><a href="/projects/botox/#project_nav" target="_blank" rel="noopener">>BOTOX注射</a></li>
+                <li><a href="javascript:void(0)" class="j-site-consult" target="_blank" rel="noopener">>疤痕针</a></li>
+                <li><a href="/projects/tattoo/#project_nav" target="_blank" rel="noopener">>纹绣</a></li>
+                <li><a href="javascript:void(0)" class="j-site-consult" target="_blank" rel="noopener">>水光注射</a></li>
+                <li><a href="/projects/#project_nav" target="_blank" rel="noopener">>其他</a></li>
             </ul>
         </div>
     </div>
