--- a/www.hzshuangmei.com/templets/shuangmei/index.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/index.htm
@@ -99,7 +99,10 @@
         <ul id="tabCon2">
             <li class="fdiv2">
                 <div class="clearFix">
-                    <div class="left"><a class="j-site-consult" href="javascript:void(0)" target="_blank" rel="noopener"><img  src="{dede:global.cfg_imgpath/}/pc/p1_01.jpg"  alt="红妆芭比大眼"/></a>
+                    <div class="left">
+                        <a class="j-site-consult" href="javascript:void(0)" target="_blank" rel="noopener">
+                        <img  src="{dede:global.cfg_imgpath/}/pc/p1_01.jpg"  alt="红妆芭比大眼"/>
+                        </a>
                     </div>
                     <div class="right clearFix">
                         <a href="/projects/eye/yandai.html" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/p1_02.jpg" alt="红妆无痕祛眼袋"/></a>
@@ -122,7 +125,7 @@
                         <a href="projects/quban/queban.html" target="_blank" rel="noopener"><img  src="{dede:global.cfg_imgpath/}/pc/p1_10.jpg"  alt="祛雀斑"/></a>
                         <a class="j-site-consult" href="javascript:void(0)" target="_blank" rel="noopener"><img  src="{dede:global.cfg_imgpath/}/pc/p1_09_1.jpg"  alt="光子嫩肤"/></a>
                         <a href="projects/tuomao/tuomao2.html" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/p1_12.jpg"  alt="清凉脱毛"/></a>
-                        <a class="j-site-consult" href="javascript:void(0)" target="_blank" rel="noopener"><img  src="{dede:global.cfg_imgpath/}/pc/p1_13.jpg"  alt="毛孔收缩"/></a>
+                        <a class="/projects/skin/ssmk.html" href="javascript:void(0)" target="_blank" rel="noopener"><img  src="{dede:global.cfg_imgpath/}/pc/p1_13.jpg"  alt="毛孔收缩"/></a>
                         <a class="j-site-consult" href="javascript:void(0)" target="_blank" rel="noopener"><img  src="{dede:global.cfg_imgpath/}/pc/p1_14.jpg"  alt="激光除皱"/></a>
                     </div>
                 </div>
