预解析百度离线宝
预解析百度离线宝

--- a/m.hzshuangmei.com/templets/shuangmei/_link.htm
+++ b/m.hzshuangmei.com/templets/shuangmei/_link.htm
@@ -4,6 +4,7 @@
 <link rel="dns-prefetch" href="https://img.hzshuangmei.com">
 <link rel="dns-prefetch" href="https://css.hzshuangmei.com">
 <link rel="dns-prefetch" href="https://js.hzshuangmei.com">
+<link rel="dns-prefetch" href="https://lxbjs.baidu.com">
 
 <link rel="prefetch" href="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js" as="script">
 <link rel="prefetch" src="https://img.hzshuangmei.com/pc/kst/default.png">
