--- a/m.hzshuangmei.com/templets/shuangmei/_meta.htm
+++ b/m.hzshuangmei.com/templets/shuangmei/_meta.htm
@@ -18,5 +18,13 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <link rel="preload" href="https://js.hzshuangmei.com/m/mobile-util.js" as="script" crossorigin>
 <script src="https://js.hzshuangmei.com/m/mobile-util.js" type="text/javascript"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114904919-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-114904919-1');
+</script>
 
