--- a/www.hzshuangmei.com/templets/shuangmei/index.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/index.htm
@@ -125,7 +125,7 @@
                         <a href="/projects/quban/queban.html" target="_blank" rel="noopener"><img  src="{dede:global.cfg_imgpath/}/pc/p1_10.jpg"  alt="祛雀斑"/></a>
                         <a class="j-site-consult" href="javascript:void(0)" target="_blank" rel="noopener"><img  src="{dede:global.cfg_imgpath/}/pc/p1_09_1.jpg"  alt="光子嫩肤"/></a>
                         <a href="/projects/tuomao/tuomao2.html" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/p1_12.jpg"  alt="清凉脱毛"/></a>
-                        <a class="/projects/skin/ssmk.html" href="javascript:void(0)" target="_blank" rel="noopener"><img  src="{dede:global.cfg_imgpath/}/pc/p1_13.jpg"  alt="毛孔收缩"/></a>
+                        <a href="/projects/skin/ssmk.html"  target="_blank" rel="noopener"><img  src="{dede:global.cfg_imgpath/}/pc/p1_13.jpg"  alt="毛孔收缩"/></a>
                         <a class="j-site-consult" href="javascript:void(0)" target="_blank" rel="noopener"><img  src="{dede:global.cfg_imgpath/}/pc/p1_14.jpg"  alt="激光除皱"/></a>
                     </div>
                 </div>
